tests/integration/auth/snapshots/main__integration__auth__grants__an_enumeration_failure_on_a_later_page_revokes_nothing.snap
---
source: tests/integration/auth/grants.rs
expression: envelope(&output)
---
{
  "json_version": "1",
  "data": {
    "success": false
  },
  "error": {
    "message": "Couldn't list organization `acme`'s client-credential pairs, so nothing was revoked: pairs are unavailable",
    "code": null
  }
}
