tests/integration/auth/snapshots/main__integration__auth__grants__no_terminal_json.snap
---
source: tests/integration/auth/grants.rs
expression: envelope(&output)
---
{
  "json_version": "1",
  "data": {
    "success": false
  },
  "error": {
    "message": "Revoking every grant for `user-123` needs confirmation, and there's no terminal to ask on. Pass `--confirm` to proceed without a prompt.",
    "code": "E062"
  }
}
