tests/integration/auth/snapshots/main__integration__auth__grants__partial_failure_json.snap
---
source: tests/integration/auth/grants.rs
expression: envelope(&output)
---
{
  "json_version": "1",
  "data": {
    "organization_id": "acme",
    "user_id": "user-123",
    "user_is_member": true,
    "clients": [
      {
        "client_id": "rover-test-client",
        "name": "Rover",
        "kind": "rover",
        "outcome": "revoked",
        "error": null
      },
      {
        "client_id": "c_8f2a",
        "name": "ci-deploy",
        "kind": "client_credentials",
        "outcome": "failed",
        "error": "<query>:0:0: revocation is unavailable"
      },
      {
        "client_id": "c_91be",
        "name": "nightly-checks",
        "kind": "client_credentials",
        "outcome": "revoked",
        "error": null
      }
    ],
    "cancelled": false,
    "success": false
  },
  "error": {
    "message": "Revocation failed under 1 of 3 OAuth clients.",
    "code": "E063"
  }
}
